--- a/index.html
+++ b/index.html
@@ -47,26 +47,15 @@
             <li class="nav-item">
               <a class="nav-link" href="#">IŠ KOJOS</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">IŠ KOJOS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">IŠ KOJOS</a>
-            </li>
           </ul>
         </div>
       </div>
     </nav>
 
     <!-- Page Content -->
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h1 class="mt-5">IŠ KOJOS</h1>
-          <p class="lead">IŠ KOJOS!</p>
-        </div>
-      </div>
-    </div>
+    <video autoplay loop muted poster="1.jpg" id="vfons">
+          <source src="1.mp4" type="video/mp4">
+      </video>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
