--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
     <!-- Page Content -->
     <video autoplay loop muted poster="1.jpg" id="vfons">
           <source src="1.mp4" type="video/mp4">
+            <source src="1.ogv" type="video/ogv">
+              <source src="1.webm" type="video/webm">
       </video>
 
     <!-- Bootstrap core JavaScript -->
