--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 <!--<![endif]-->
 
 <head>
-	<title>zenitas.lt</title>
+	<title>vidmem.nl</title>
 
 	<!-- Meta Tags -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
-	<meta name="author" content="">
+	<meta name="author" content="Andrius Venclauskas">
 
 	<!--  Boostrap Framework  -->
 	<link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -40,7 +40,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="../">zenitas<span class="text-primary">.lt</span></a>
+            <a class="navbar-brand" href="../">vidmem<span class="text-primary">.nl</span></a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-navbar-collapse-1">
@@ -73,10 +73,10 @@
         <div class="bg-filter sTop">
             <div class="container">
                 <div class="jumbotron trn v-center">
-                    <h1>Kuriame ateitį</h1>
+                    <h1>VidMem</h1>
                     <div class="space-sm"></div>
-                    <p>Programuojame internetines svetaines.
-                        <br>Prisitaikome prie bet kokio verslo bei įrenginio.</p>
+                    <p>Video production.
+                        <br>Capture it</p>
                     <div class="space-sm"></div>
                     <ul class="list-inline">
                         <li>
@@ -598,7 +598,7 @@
 
     <div class="footer-bottom">
         <div class="container">
-            <p>© 2016 zenitas.lt Visos teisės saugomos.</p>
+            <p>© 2017 vidmem.nl Visos teisės saugomos.</p>
         </div>
     </div>
 </footer>
