--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <!--<![endif]-->
 
 <head>
-	<title>vidmem.nl</title>
+	<title>kidecor.nl</title>
 
 	<!-- Meta Tags -->
 	<meta charset="UTF-8">
@@ -40,7 +40,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="../">vidmem<span class="text-primary">.nl</span></a>
+            <a class="navbar-brand" href="../">kidecor<span class="text-primary">.nl</span></a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-navbar-collapse-1">
@@ -73,9 +73,9 @@
         <div class="bg-filter sTop">
             <div class="container">
                 <div class="jumbotron trn v-center">
-                    <h1>VidMem</h1>
+                    <h1>KidDecorations</h1>
                     <div class="space-sm"></div>
-                    <p>Video production.
+                    <p>Children room decoration
                         <br>Capture it</p>
                     <div class="space-sm"></div>
                     <ul class="list-inline">
