--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="../">kidecor<span class="text-primary">.nl</span></a>
+            <a class="navbar-brand" href="../">kideco<span class="text-primary">.nl</span></a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-navbar-collapse-1">
@@ -75,8 +75,8 @@
                 <div class="jumbotron trn v-center">
                     <h1>KidDecorations</h1>
                     <div class="space-sm"></div>
-                    <p>Children room decoration
-                        <br>Capture it</p>
+                    <p>All kind decorations from natural material
+                        <br>Decorate it</p>
                     <div class="space-sm"></div>
                     <ul class="list-inline">
                         <li>
